<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/markerTitle"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:hint="@string/temp_input" />

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="16dp" />
</LinearLayout>
