...
            app:maxImageSize="50dp"
            app:backgroundTint="@color/gray"
            android:layout_gravity="bottom|end"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="400dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/idea"
...
            app:maxImageSize="50dp"
            app:backgroundTint="@color/gray"
            android:layout_gravity="bottom|end"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/upload"
...
